# news_app

./: README.md  main.py  pyproject.toml  send_email.py
