[tool.poetry]
name = "news-app"
version = "0.1.0"
description = ""
authors = ["Elen Bačovská <elen.bacovska@gmail.com>"]
readme = "README.md"
packages = [{include = "news_app"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
dotenv = "^0.0.5"
pip = "^23.1.2"
install = "^1.3.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
